2008-09-23  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add `shell` target, which runs `csharp -r:Mono.Rocks.dll` 
	  for simple interactive testing.
	* doc/en/**: Flush.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* . (svn:ignore): Ignore MonoDevelop-generated directories.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.
	* . (svn:ignore): Update ignored files list.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* lib/mono-rocks (svn:ignore): Ignore generated directories.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Either.cs 
	  to the build.
	* Mono.Rocks.csproj, Tests/Mono.Rocks.Tests.csproj: Update output 
	  directory; correct filename errors.
	* doc/en/Mono.Rocks/Either.xml: Added.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Place Mono.Rocks.dll & Mono.Rocks.Tests.dll into
	  lib/mono-rocks; add an `install` target -- usage is:
	    make install prefix=/path/to/root/prefix
	  If necessary, libdir can also be set if $prefix/lib isn't the
	  correct $libdir:
	    make install prefix=/path/to/root/prefix libdir=/alt/libdir
	  Rename `run-test` to `check`.
	* doc/Makefile.include: place mono-rocks-docs.{tree,zip} into
	  lib/monodoc/sources; add doc-install target; fix 
	  mono-rocksdocs.{tree,zip} generation.
	* doc/mono-rocks-docs.source: Moved to
	  lib/monodoc/sources/mono-rocks-docs.source.
	* lib/monodoc/sources/mono-rocks-docs.source: @basefile needs to refer
	  to the correct filename.
	* lib/mono-rocks (svn:ignore), lib/monodoc/sources (svn:ignore): 
	  Ignore generated files.
	* lib/pkgconfig/mono-rocks.pc: Added; pkg-config control file for
	  Mono.Rocks.dll.

2008-09-20  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/Cons`1.cs: Removed (should have removed along with
	  Mono.Rocks/Cons.cs on 2008-09-14...).

2008-09-20  Jonathan Pryor  <jpryor@novell.com>

	* mkeithers: Added; generates Mono.Rocks/Eithers.cs.