@@ -47,6 +47,7 @@
     <Compile Include="Mono.Rocks\Int16.cs" />
     <Compile Include="Mono.Rocks\Int32.cs" />
     <Compile Include="Mono.Rocks\Int64.cs" />
+    <Compile Include="Mono.Rocks\JaggedArrayRocks.cs" />
     <Compile Include="Mono.Rocks\KeyValuePair.cs" />
     <Compile Include="Mono.Rocks\Lambda.cs" />
     <Compile Include="Mono.Rocks\Lambdas.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Mono.Rocks\NaturalStringComparer.cs" />
     <Compile Include="Mono.Rocks\Nullable.cs" />
     <Compile Include="Mono.Rocks\Object.cs" />
+    <Compile Include="Mono.Rocks\RectangularArrayRocks.cs" />
     <Compile Include="Mono.Rocks\Sequence.cs" />
     <Compile Include="Mono.Rocks\Stream.cs" />
     <Compile Include="Mono.Rocks\StreamConverter.cs" />
