@@ -1,3 +1,8 @@
+2008-09-23  Jonathan Pryor  <jpryor@novell.com>
+
+	* JaggedArrayTest.cs, RectangularArrayTest.cs: Added; tests for
+	  .Rows() extension methods.
+
 2008-09-22  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerableTest.cs: Add #region blocks for doc usage; add exception
